src/app/components/searchresult/searchresult.component.css
.meal-result {
  margin-top: 4rem;
}
#meal {
  margin: 2.4rem 0;
}
.meal-item {
  border-radius: 1rem;
  -webkit-border-radius: 1rem;
  -moz-border-radius: 1rem;
  -ms-border-radius: 1rem;
  -o-border-radius: 1rem;
  overflow: hidden;
  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
  margin: 2rem 0;
}
.meal-img img {
  width: 100%;
  display: block;
}
.meal-name {
  padding: 1rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  display: block;
}
.meal-name h3 {
  font-size: 1.4rem;
}

@media screen and (min-width: 768px) {
  #meal {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
  }
  .meal-item {
    margin: 0;
  }
  .meal-details {
    width: 700px;
  }
}

@media screen and (min-width: 992px) {
  #meal {
    grid-template-columns: repeat(3, 1fr);
  }
}

